# semanticFun

./: .gitignore  README.md  embeddings.py  home.py  main.py  models.py  ner.py  pyproject.toml
pages/: 2_notes_input.py  3_notes_overview.py  4_similarity_and_embedding.py  5_semantic_sorting.py
